versioned_docs/version-1.2.0/borders-background/background-color.mdx
---
title: Background Color
sidebar_position: 1
---

import ClassList from "@site/src/components/ClassList/ClassList";
import ClassPreview from "@site/src/components/ClassPreview/ClassPreview";

# Background Color

Sets the background color of an element.

## Base Colors

These classes use predefined color values to set the background color of the respective elements.

<ClassList
  classData={[
    {
      className: 'bg-red',
      properties: [
        'background-color: #d73d3d;'
      ]
    },
    {
      className: 'bg-orange',
      properties: [
        'background-color: #e06814;'
      ]
    },
    {
      className: 'bg-yellow',
      properties: [
        'background-color: #d3a107;'
      ]
    },
    {
      className: 'bg-green',
      properties: [
        'background-color: #1fb155;'
      ]
    },
    {
      className: 'bg-teal',
      properties: [
        'background-color: #12a695;'
      ]
    },
    {
      className: 'bg-cyan',
      properties: [
        'background-color: #05a4bf;'
      ]
    },
    {
      className: 'bg-blue',
      properties: [
        'background-color: #3575dd;'
      ]
    },
    {
      className: 'bg-indigo',
      properties: [
        'background-color: #595cd9;'
      ]
    },
    {
      className: 'bg-indigo',
      properties: [
        'background-color: #7d53dd;'
      ]
    },
    {
      className: 'bg-pink',
      properties: [
        'background-color: #d4418a;'
      ]
    },
    {
      className: 'bg-gray',
      properties: [
        'background-color: #606773;'
      ]
    },
    {
      className: 'bg-lead',
      properties: [
        'background-color: #3f3f4e;'
      ]
    },
    {
      className: 'bg-white',
      properties: [
        'background-color: white;'
      ]
    },
    {
      className: 'bg-black',
      properties: [
        'background-color: black;'
      ]
    },
  ]}
/>

## Color Variations

In addition to the standard background colors, Yumma CSS provides a convenient way to generate shades of each color. The component below displays a grid of light and dark shades for each background color:

:::info Color Variations for Light and Dark Backgrounds
You have access to 6 shades of both dark and light colors. This means you can use classes like `bg-l-red-1` through `bg-l-{color}-6` for light backgrounds and `bg-d-red-1` through `bg-d-{color}-6` for dark backgrounds.
:::

### Light Variations

<ClassList
  classData={[
    {
      className: "bg-l-red-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-orange-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-yellow-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-green-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-teal-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-cyan-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-blue-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-indigo-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-violet-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-pink-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-gray-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
    {
      className: "bg-l-lead-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    },
  ]}
/>

### Dark Variations

<ClassList
  classData={[
    {
      className: "bg-d-red-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-orange-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-yellow-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-green-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-teal-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-cyan-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-blue-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-indigo-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-violet-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-pink-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-d-gray-{value}",
      properties: ["background-color: mix(black, $v, $i * 10%);"]
    },
    {
      className: "bg-l-lead-{value}",
      properties: ["background-color: mix(white, $v, $i * 10%);"]
    }
  ]}
/>